# PteroMCP

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/pteromcp/: __init__.py  __main__.py  client.py  config.py  errors.py  server.py
src/pteromcp/tools/: __init__.py  allocations.py  client_surface.py  databases.py  eggs.py  mounts.py  nodes.py  roles.py  servers.py  users.py
tests/: conftest.py  test_client.py  test_config.py  test_integration.py  test_server.py  test_stdio_handshake.py
