[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "pteromcp"
version = "0.1.0"
description = "Model Context Protocol server for Pterodactyl and Pelican game-server panels."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "PteroMCP contributors" }]
keywords = ["mcp", "pterodactyl", "pelican", "game-server", "ai", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp>=1.10,<2.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "respx>=0.21",
    "ruff>=0.5",
]

[project.scripts]
pteromcp = "pteromcp.__main__:main"

[project.urls]
Homepage = "https://github.com/Showdown76py/PteroMCP"
Issues = "https://github.com/Showdown76py/PteroMCP/issues"
Source = "https://github.com/Showdown76py/PteroMCP"

[tool.hatch.build.targets.wheel]
packages = ["src/pteromcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers"]
markers = [
    "integration: tests that hit a real Pelican/Pterodactyl panel (require env vars)",
]

[tool.ruff]
target-version = "py310"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = [
    "E501",   # line length, governed by formatter
    "RUF001", # ambiguous unicode (we use en-dashes in docstrings intentionally)
    "RUF002",
    "RUF003",
]
